change design of website and squash shuffle bug

--- a/frontend/mediaq/src/styles/custom.scss
+++ b/frontend/mediaq/src/styles/custom.scss
@@ -1,3 +1,4 @@
 // $navbar-padding-y: ((.2 * 1rem) / 2);
 
+$primary: #8989da;
 @import 'bootstrap/scss/bootstrap';
